--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@tarojs/async-await": "^1.2.1",
+    "@tarojs/async-await": "^1.2.2",
     "@tarojs/components": "^1.2.1",
     "@tarojs/redux": "^1.2.1",
     "@tarojs/redux-h5": "^1.2.1",
@@ -31,30 +31,32 @@
     "@tarojs/taro-swan": "^1.2.1",
     "@tarojs/taro-tt": "^1.2.1",
     "@tarojs/taro-weapp": "^1.2.1",
-    "nervjs": "^1.3.9",
     "nerv-devtools": "^1.3.9",
+    "nervjs": "^1.3.9",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "taro-ui": "^1.5.3"
   },
   "devDependencies": {
-    "@types/react": "^16.4.8",
-    "@types/webpack-env": "^1.13.6",
     "@tarojs/plugin-babel": "^1.2.1",
     "@tarojs/plugin-csso": "^1.2.1",
     "@tarojs/plugin-less": "^1.2.1",
+    "@tarojs/plugin-sass": "^1.2.2",
     "@tarojs/plugin-uglifyjs": "^1.2.1",
     "@tarojs/webpack-runner": "^1.2.1",
+    "@types/react": "^16.4.8",
+    "@types/webpack-env": "^1.13.6",
+    "babel-eslint": "^8.2.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-jsx-stylesheet": "^0.6.5",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
-    "babel-eslint": "^8.2.3",
     "eslint": "^4.19.1",
     "eslint-config-taro": "^1.2.1",
-    "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.8.2",
     "eslint-plugin-taro": "^1.2.1"
   }
 }
